--- a/.gitignore
+++ b/.gitignore
@@ -102,3 +102,15 @@ venv.bak/
 
 # mypy
 .mypy_cache/
+
+# swap files
+*.sw?
+
+# trace statistics
+*.csv
+traces/
+
+# log
+log/
+
+.testrepository/*
