--- a/conf/pss-cr-sim.conf
+++ b/conf/pss-cr-sim.conf
@@ -20,7 +20,7 @@ rack_count = 40
 data_redundancy = RS_9_6
 
 # sss, pss, copyset, ...
-data_placement = sss
+data_placement = pss
 
 # when dat placement is copyset
 scatter_width = 13
