--- a/conf/samples/lrc-cr-sim.conf
+++ b/conf/samples/lrc-cr-sim.conf
@@ -17,7 +17,7 @@ machines_per_rack = 6
 rack_count = 40
 # datacenters = 1
 
-data_redundancy = RS_9_6
+data_redundancy = LRC_10_6_2
 
 # sss, pss, copyset, ...
 data_placement = sss
