--- a/conf/cf1-cr-sim.conf
+++ b/conf/cf1-cr-sim.conf
@@ -7,10 +7,11 @@ total_active_storage = 1
 
 # rack amount can be computed by all these data. Chunk size in MBs.
 # If not given, datacenter amount will be 1.
-chunk_size = 256 
-chunks_per_disk = 6000
+chunk_size = 256
+disk_capacity = 2
 disks_per_machine = 10
 machines_per_rack = 5
+rack_count = 24
 # datacenters = 1
 
 # sss, pss, copyset, hdfs, drc, ...
@@ -29,6 +30,9 @@ availability_counts_for_recovery = true
 
 # Output contents
 outputs = DL,UNA,RB
+
+# parallel repair flag
+paralllel_repair = true
 
 # 'true' means use lazy recovery during data recovery.
 lazy_recovery = false
@@ -62,7 +66,8 @@ occurrence_timestamp = 1500
 una_scope = 1_machine
 una_downtime = 20
 dl_scope = 50_disk
-dl_downtime = 20
+# dl_downtime > una_downtime
+dl_downtime = 20.5
 # "True" means data lost compoenents choose from unavailable components.
 choose_from_una = false
 
