--- a/conf/samples/xorbas-pss-cr-sim.conf
+++ b/conf/samples/xorbas-pss-cr-sim.conf
@@ -17,10 +17,10 @@ machines_per_rack = 6
 rack_count = 40
 # datacenters = 1
 
-data_redundancy = RS_9_6
+data_redundancy = XORBAS_10_6_2
 
 # sss, pss, copyset, ...
-data_placement = sss
+data_placement = pss
 
 # when dat placement is copyset
 scatter_width = 13
