--- a/conf/cr-sim.conf
+++ b/conf/cr-sim.conf
@@ -25,7 +25,7 @@ data_placement = sss
 # when dat placement is copyset
 scatter_width = 13
 
-hierarchical = true
+hierarchical = false
 # hierarchical = true need distinct_racks(< n)
 distinct_racks = 7
 
@@ -50,9 +50,9 @@ bandwidth_contention = FIFO
 availability_counts_for_recovery = true
 
 # 'true' means use lazy recovery during data recovery.
-lazy_recovery = false
+lazy_recovery = true
 lazy_only_available = false
-recovery_threshold = 13
+recovery_threshold = 7
 max_degraded_slices = 0.1
 installment_size = 1000
 availability_to_durability_threshold = 0,1,10000
