--- a/conf/manual-cr-sim.conf
+++ b/conf/manual-cr-sim.conf
@@ -50,7 +50,7 @@ bandwidth_contention = FIFO
 availability_counts_for_recovery = true
 
 # 'true' means use lazy recovery during data recovery.
-lazy_recovery = false
+lazy_recovery = true
 lazy_only_available = false
 recovery_threshold = 7
 max_degraded_slices = 0.1
@@ -65,7 +65,7 @@ outputs = DL,UNA,RB
 paralllel_repair = false
 
 # 'true' means use RAFI recovery during data recovery.
-rafi_recovery = true
+rafi_recovery = false
 
 # 'true' means there are more than one data redundancy schemes in the system, 'false' means only one
 heterogeneous_redundancy = false
@@ -79,7 +79,7 @@ block_failure = false
 
 [RAFI Recovery]
 # detect interval in hours
-detect_intervals = 1,0.25,0.033
+detect_intervals = 1,0.25,0.033,0.033
 
 [Heterogeneous Redundancy]
 first_redundancy = RS_3_1
