--- a/conf/samples/cr-sim.conf
+++ b/conf/samples/cr-sim.conf
@@ -25,7 +25,7 @@ data_placement = sss
 # when dat placement is copyset
 scatter_width = 13
 
-hierarchical = true
+hierarchical = false
 # hierarchical = true need distinct_racks(< n)
 distinct_racks = 7
 
@@ -52,7 +52,7 @@ availability_counts_for_recovery = true
 # 'true' means use lazy recovery during data recovery.
 lazy_recovery = false
 lazy_only_available = false
-recovery_threshold = 13
+recovery_threshold = 7
 max_degraded_slices = 0.1
 installment_size = 1000
 availability_to_durability_threshold = 0,1,10000
@@ -65,7 +65,7 @@ outputs = DL,UNA,RB
 paralllel_repair = false
 
 # 'true' means use RAFI recovery during data recovery.
-rafi_recovery = false
+rafi_recovery = true
 
 # 'true' means there are more than one data redundancy schemes in the system, 'false' means only one
 heterogeneous_redundancy = false
@@ -79,7 +79,7 @@ block_failure = false
 
 [RAFI Recovery]
 # detect interval in hours
-detect_intervals = 1,0.25,0.033,0.033
+detect_intervals = 1,0.25,0.033
 
 [Heterogeneous Redundancy]
 first_redundancy = RS_3_1
