--- a/conf/samples/lrc-manual.conf
+++ b/conf/samples/lrc-manual.conf
@@ -17,7 +17,7 @@ machines_per_rack = 6
 rack_count = 40
 # datacenters = 1
 
-data_redundancy = RS_9_6
+data_redundancy = LRC_10_6_2
 
 # sss, pss, copyset, ...
 data_placement = sss
@@ -52,7 +52,7 @@ availability_counts_for_recovery = true
 # 'true' means use lazy recovery during data recovery.
 lazy_recovery = false
 lazy_only_available = false
-recovery_threshold = 7
+recovery_threshold = 13
 max_degraded_slices = 0.1
 installment_size = 1000
 availability_to_durability_threshold = 0,1,10000
@@ -65,7 +65,7 @@ outputs = DL,UNA,RB
 paralllel_repair = false
 
 # 'true' means use RAFI recovery during data recovery.
-rafi_recovery = true
+rafi_recovery = false
 
 # 'true' means there are more than one data redundancy schemes in the system, 'false' means only one
 heterogeneous_redundancy = false
@@ -79,7 +79,7 @@ block_failure = false
 
 [RAFI Recovery]
 # detect interval in hours
-detect_intervals = 1,0.25,0.033
+detect_intervals = 1,0.25,0.033,0.033
 
 [Heterogeneous Redundancy]
 first_redundancy = RS_3_1
