--- a/conf/samples/msr-pss-cr-sim.conf
+++ b/conf/samples/msr-pss-cr-sim.conf
@@ -25,7 +25,7 @@ data_placement = pss
 # when dat placement is copyset
 scatter_width = 13
 
-hierarchical = true
+hierarchical = false
 # hierarchical = true need distinct_racks(< n)
 distinct_racks = 7
 
