--- a/conf/samples/MSR14.conf
+++ b/conf/samples/MSR14.conf
@@ -17,7 +17,7 @@ machines_per_rack = 6
 rack_count = 60
 # datacenters = 1
 
-data_redundancy = LRC_16_12_2
+data_redundancy = MSR_14_10_13
 
 # sss, pss, copyset, ...
 data_placement = sss
