--- a/conf/samples/RS10.conf
+++ b/conf/samples/RS10.conf
@@ -17,7 +17,7 @@ machines_per_rack = 6
 rack_count = 60
 # datacenters = 1
 
-data_redundancy = LRC_16_12_2
+data_redundancy = RS_10_6
 
 # sss, pss, copyset, ...
 data_placement = sss
@@ -44,7 +44,7 @@ recovery_bandwidth_cross_rack = 90000
 recovery_bandwidth_intra_rack = 1800000
 
 # True in default, we don't consider read requests queuing during data recoveries.
-queue_disable = true
+queue_disable = false
 bandwidth_contention = FIFO
 
 availability_counts_for_recovery = true
@@ -52,7 +52,7 @@ availability_counts_for_recovery = true
 # 'true' means use lazy recovery during data recovery.
 lazy_recovery = false
 lazy_only_available = false
-recovery_threshold = 14
+recovery_threshold = 7
 max_degraded_slices = 0.1
 installment_size = 1000
 availability_to_durability_threshold = 0,1,10000
