--- a/conf/samples/XORBAS16.conf
+++ b/conf/samples/XORBAS16.conf
@@ -17,7 +17,7 @@ machines_per_rack = 6
 rack_count = 60
 # datacenters = 1
 
-data_redundancy = LRC_16_12_2
+data_redundancy = XORBAS_16_10_2
 
 # sss, pss, copyset, ...
 data_placement = sss
